移植开发场景计数与异步日志到 Java 8 / Port developer progress and async logging to Java 8